Current Debt for Users (App) userlist is getting updated after buying (App) Workaround for localization issues in Double/string conversions (Webclient) Changed UI for State to checkboxes (Webclient)

--- a/WebAdminClient/StringsLocal.de.resx
+++ b/WebAdminClient/StringsLocal.de.resx
@@ -123,6 +123,9 @@
   <data name="Accounting" xml:space="preserve">
     <value>Buchungen</value>
   </data>
+  <data name="Active" xml:space="preserve">
+    <value>Aktiv</value>
+  </data>
   <data name="AddKeyDate" xml:space="preserve">
     <value>Neuer Stichtag</value>
   </data>
