--- a/WebAdminClient/StringsLocal.resx
+++ b/WebAdminClient/StringsLocal.resx
@@ -123,6 +123,9 @@
   <data name="Accounting" xml:space="preserve">
     <value>Accounting</value>
   </data>
+  <data name="Active" xml:space="preserve">
+    <value>Active</value>
+  </data>
   <data name="AddKeyDate" xml:space="preserve">
     <value>Add Keydate</value>
   </data>
