--- a/WebAdminClient/StringsLocal.de.resx
+++ b/WebAdminClient/StringsLocal.de.resx
@@ -210,6 +210,9 @@
   <data name="Price" xml:space="preserve">
     <value>Preis</value>
   </data>
+  <data name="PriceList" xml:space="preserve">
+    <value>Preisliste</value>
+  </data>
   <data name="ProductAccounting" xml:space="preserve">
     <value>Gekaufte Produkte</value>
   </data>
